# stencil

./: .pre-commit-config.yaml  LICENSE  README.md  STENCIL.md  pyproject.toml
stencil/: config.example.yaml  generate.py
stencil/scripts/: install-docker.ps1  install-docker.sh
stencil/templates/: .sqlfluff.j2  Dockerfile.j2  Dockerfile.pdf.j2  Makefile-base.j2  Makefile-doc.j2  Makefile-pdf.j2  Makefile-pkg.j2  Makefile.j2  docker-compose-html.yml.j2  docker-compose-pdf.yml.j2  docker-compose.yml.j2  hidden-filter.lua.j2  html-template.html.j2  mermaid-figure-filter.lua.j2  nginx.conf.j2  pandoc-header.tex.j2  pandoc-template.latex.j2  pdfa-metadata.xmp.j2  table-style.lua.j2
